--- a/package.json
+++ b/package.json
@@ -59,16 +59,17 @@
     "bluebird": "^3.5.1",
     "chai": "^4.1.2",
     "express": "^4.16.2",
+    "hoek": "^5.0.3",
     "interface-prototype": "^1.1.1",
     "mocha": "^5.0.0",
     "sinon": "^4.1.2",
     "standard": "^11.0.0",
     "webpack": "^4.0.0",
-    "webpack-cli": "^2.0.9"
+    "webpack-cli": "^2.0.15"
   },
   "dependencies": {
-    "stack-trace": "0.0.10",
-    "babel-plugin-module-resolver": "^3.0.0"
+    "babel-plugin-module-resolver": "^3.0.0",
+    "stack-trace": "0.0.10"
   },
   "files": [
     "dist",
